--- a/src/stylesheets/settings-window.scss
+++ b/src/stylesheets/settings-window.scss
@@ -20,7 +20,7 @@
 
         &::before {
             background-size: 23px;
-            background: url('https://s.kaskus.id/themes_3.0/mobile/images/logo-n.svg') no-repeat;
+            background: url('https://raw.githubusercontent.com/reforget-id/kaskus-essentials-desktop/main/icon.svg') no-repeat;
             content: '';
             display: inline-block;
             height: 24px;
