update v0.8.3 - firefox compatibility - tambah link thread kaskus
Took 1 hour 23 minutes

--- a/src/stylesheets/settings-window.scss
+++ b/src/stylesheets/settings-window.scss
@@ -6,7 +6,7 @@
 
     #kas-ess-settings_wrapper {
         overflow-y: scroll;
-        max-height: 93%;
+        height: 93%;
     }
 
     #kas-ess-settings_header {
