pangkat di reply tidak tampil dengan benar jika itu TS
Took 31 minutes

--- a/src/stylesheets/thread.scss
+++ b/src/stylesheets/thread.scss
@@ -92,6 +92,10 @@
     margin-left: 0 !important;
 }
 
+.Mtop-5px {
+    margin-top: 5px !important;
+}
+
 .reply-body {
     min-height: 50px !important;
     padding-bottom: 20px !important;
